--- a/sections/product-info.liquid
+++ b/sections/product-info.liquid
@@ -109,7 +109,7 @@
             </p>
           </div>
 
-          <button class="size-table accordion">{{ 'general.description' | t }}</button>
+          <button class="size-table accordion">{{ 'general.dimensional_grid' | t }}</button>
           <div class="panel">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
