--- a/sections/product-info.liquid
+++ b/sections/product-info.liquid
@@ -202,19 +202,19 @@
   "class": "section",
   "settings": [
     {
-      "type": "inline_richtext",
+      "type": "richtext",
       "id": "delivery",
       "default": "Lorem",
       "label": "Delivery policy"
     },
     {
-      "type": "inline_richtext",
+      "type": "richtext",
       "id": "return_of_goods",
       "default": "Lorem",
       "label": "Return of goods"
     },
     {
-      "type": "inline_richtext",
+      "type": "richtext",
       "id": "payment_methods",
       "default": "Lorem",
       "label": "Payment methods"
