--- a/sections/product-info.liquid
+++ b/sections/product-info.liquid
@@ -100,7 +100,6 @@
           {% comment %} <button class="button_primary">Додати до кошика</button> {% endcomment %}
           {%- render 'buy-buttons', product: product, product_form_id: product_form_id, section_id: section.id -%}
         </div>
-
         <div class="catalogue_supplies-description">
           <button class="accordion">{{ 'general.description' | t }}</button>
           <div class="panel">
@@ -111,10 +110,10 @@
 
           <button class="size-table accordion">{{ 'general.dimensional_grid' | t }}</button>
           <div class="panel">
-            {% if section.settings.blocks %}
-              {% for block in section.settings.blocks %}
-                {% case block.type == '@app' %}
-                  {% when '@app' %}
+            {% if section.blocks %}
+              {% for block in section.blocks %}
+                {%- case block.type -%}
+                  {%- when '@app' -%}
                     {% render block %}
                 {% endcase %}
               {% endfor %}
