--- a/snippets/card-product-new.liquid
+++ b/snippets/card-product-new.liquid
@@ -49,7 +49,9 @@
     </div>
     <div class="favorite-card-description">
       <div class="favorite-card-title">
-        <h3>{{ card_product.title | escape }}</h3>
+        <h3>
+          {{ card_product.title | escape -}}
+        </h3>
       </div>
       <div class="favorite-card-price">
         {% comment %}
